--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sound engine for the primojs suite",
   "main": "primo-sounds.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "npm i -g primo-lumber"
   },
   "repository": {
     "type": "git",
