--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "preinstall": "npm i -g primo-lumber"
   },
+  "devDependencies": {
+    "express": "",
+    "send": ""
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/robashton/primo-audio"
