--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "primo-sounds.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "npm i -g primo-lumber"
+    "preinstall": "npm i -g primo-lumber browserify"
   },
   "devDependencies": {
     "express": "",
