--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Rob Ashton",
   "license": "MIT",
   "engines":  {
-    "node": "0.8.x"
+    "node": "0.8.x",
+    "npm": "1.1.x"
   }
 }
